# openresponses-gw

./: .env.example  .gitignore  .pre-commit-config.yaml  API_IMPLEMENTATION_STATUS.md  CLAUDE.md  CONFIGURATION.md  CONFORMANCE.md  CONFORMANCE_STATUS.md  CONTRIBUTING.md  FULL_API_IMPLEMENTATION_PLAN.md  FUNCTIONAL_CONFORMANCE.md  Makefile  PROJECT_PLAN.md  QUICKSTART.md  README.md  TESTING.md  conformance-results.json  docker-compose.yaml  go.mod  go.sum  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
cmd/envoy-extproc/: main.go
cmd/server/: main.go
docs/: API_IMPLEMENTATION_STATUS.md  ARCHITECTURE.md  ASSESSMENT.md  CONFIGURATION.md  CONFORMANCE.md  DEPLOYMENT.md  DESIGN-ecosystem-alignment.md  DESIGN-stateless-translation-layer.md  FULL_API_IMPLEMENTATION_PLAN.md  OPENAPI_CONFORMANCE.md  QUICKSTART.md  SCRIPTS.md  TESTING.md  VLLM_FIELD_TRACKING.md  embed.go  openapi.yaml  proposal-vsr-responses-api-separation.md  swagger.yaml
examples/envoy/: CHANGES.md  (+7 more)
scripts/: README.md  fix-openapi-nullable.py  openapi_conformance.py  run-conformance-tests.sh  test-and-validate-responses.sh  test-conformance-with-server.sh  test-conformance.sh  test-envoy-extproc.sh  test-responses-minimal.sh  test-smoke.sh  validate-openapi-sync.sh
tests/integration/: conftest.py  novatech_mcp_server.py  pyproject.toml  test_connectors.py  test_conversations.py  test_demo_workflow.py  test_files.py  test_models.py  test_prompt_resolution.py  test_prompts.py  test_responses.py  test_search_filters.py  test_sse_events.py  test_streaming_persistence.py  test_vector_stores.py
(+121 files in other folders)
