[project]
name = "openresponses-gw-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "openai>=1.68.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "envoy_skip: test is not compatible with Envoy ExtProc adapter",
]
